<resources>
    <string name="app_name">Smart Home Adapters</string>

    <!-- Strings related to the Authentication Activity -->
    <string name="authorize_button">Sign in or register</string>

    <!-- Strings related to all screens in the Registration Wizard (RobotRegistrationActivity) -->
    <string name="cancel_button_text">CANCEL SETUP</string>

    <!-- Strings related to ConfigureRobotFragment -->
    <string name="finish_button_text">Finish</string>
    <string name="crf_title_text">Calibrate Your Device</string>

    <!-- Strings related to EditRobotFragment -->
    <string name="reconfigure_button_text">Reconfigure</string>
    <string name="rename_button_text">Rename</string>
    <string name="delete_button_text">Delete</string>
    <string name="erf_title_text">Edit %s</string>
    <string name="confirm_delete_title">Permanently delete the device</string>
    <string name="confirm_delete_body">Are you sure you want to delete %s? This will permanently remove the device from your account.</string>

    <!-- Strings related to ManualEntryFragment -->
    <string name="mef_title_text">Manual Robot Code Entry</string>
    <string name="registration_code_placeholder">Registration code</string>
    <string name="back_button_text">GO BACK TO SCANNER</string>

    <!-- Strings related to NicknameFragment -->
    <string name="nf_title_text">Name Your Device</string>
    <string name="device_name_placeholder">Device name</string>
    <string name="next_button_text">CONTINUE</string>
    <string name="update_name_button_text">RENAME</string>

    <!-- Strings related to QRFragment -->
    <string name="qrf_title_text">Scan QR</string>
    <string name="camera_button_text">Press to start camera</string>
    <string name="manual_entry_button_text">MANUAL ENTRY</string>

    <!-- Strings related to SelectAttachFragment -->
    <string name="saf_title_text">Select Attachment</string>
    <string name="register_button_text">Register</string>

    <!-- Strings related to RobotsFragment -->
    <string name="welcome_text">Welcome Home, %s</string>

    <!-- Strings related to settings_menu -->
    <string name="log_out_text">Log out</string>
    <string name="welcome_text_no_name">Welcome Home</string>

    <!-- Strings related to view_config_card -->
    <string name="config_position_placeholder" translatable="false">%d/%d</string>

</resources>
